--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@netlify/functions": "^2.8.1",
     "@sparticuz/chromium": "^126.0.0",
-    "puppeteer-core": "^22.13.1"
+    "puppeteer-core": "^22.13.1",
+	"netlify-plugin-chromium": "^1.1.4"
   }
 }
